--- a/snail/pom.xml
+++ b/snail/pom.xml
@@ -6,7 +6,7 @@
 	
 	<parent>
 		<groupId>com.acgist</groupId>
-		<artifactId>snail-parent</artifactId>
+		<artifactId>parent</artifactId>
 		<version>${acgist.version}</version>
 		<relativePath>../</relativePath>
 	</parent>
@@ -22,35 +22,6 @@
 	<description>基于Java、JavaFX开发的下载工具，支持下载协议：BT（BitTorrent、磁力链接、种子）、FTP、HTTP。</description>
 	<inceptionYear>2019</inceptionYear>
 	
-	<properties>
-		<vendor>acgist</vendor>
-		<module>${project.groupId}.${project.artifactId}</module>
-		<encoding>UTF-8</encoding>
-		<!-- 系统：win、mac、linux -->
-		<os.name>win</os.name>
-		<!-- Java -->
-		<java.version>11</java.version>
-		<!-- JavaFX -->
-		<javafx.version>11.0.2</javafx.version>
-		<!-- 依赖 -->
-		<h2.version>1.4.199</h2.version>
-		<slf4j.version>1.8.0-alpha2</slf4j.version>
-		<logback.version>1.3.0-alpha4</logback.version>
-		<!-- JUnit -->
-		<junit.version>4.12</junit.version>
-		<!-- Maven插件 -->
-		<maven.gpg.version>1.6</maven.gpg.version>
-		<maven.jar.version>3.2.0</maven.jar.version>
-		<maven.nexus.version>1.6.8</maven.nexus.version>
-		<maven.source.version>3.2.0</maven.source.version>
-		<maven.javadoc.version>3.1.1</maven.javadoc.version>
-		<maven.compiler.version>3.8.1</maven.compiler.version>
-		<maven.resources.version>3.1.0</maven.resources.version>
-		<maven.dependency.version>3.1.1</maven.dependency.version>
-		<!-- 文件编码 -->
-		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
-	</properties>
-
 	<dependencies>
 		<!-- 数据库：H2 -->
 		<dependency>
@@ -73,14 +44,6 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
-		</dependency>
-		
-		<!-- 测试：JUnit -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -152,8 +115,8 @@
 							<targetPath>META-INF/</targetPath>
 							<!-- 开源协议、README -->
 							<includes>
-								<include>LICENSE</include>
-								<include>README.md</include>
+								<include>../LICENSE</include>
+								<include>../README.md</include>
 							</includes>
 						</resource>
 					</resources>
@@ -190,11 +153,6 @@
 				<configuration>
 					<!-- MANIFEST.MF -->
 					<archive>
-						<manifest>
-							<mainClass>com.acgist.main.Application</mainClass>
-							<addClasspath>true</addClasspath>
-							<classpathPrefix>lib</classpathPrefix>
-						</manifest>
 						<manifestEntries>
 							<Built-By>${vendor}</Built-By>
 							<Automatic-Module-Name>${module}</Automatic-Module-Name>
