--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	
 	<!--
+	版本配置：
+	pom.xml
+	builder/config.bat
+	SnailLauncher/src/snail.ini
+	src/main/resources/config/system.properties
+	
+	编译命令：
 	mvn -e clean package deploy -P release -D skipTests -D javafx.platform=win|mac|linux
 	-D skipTests：编译测试代码
 	-D maven.test.skip=true：跳过编译测试代码
 	-->
-	<!-- 版本配置：pom.xml、builder/config.bat、SnailLauncher/src/snail.ini、src/main/resources/config/system.properties -->
 	
 	<modelVersion>4.0.0</modelVersion>
 	
@@ -29,15 +35,12 @@
 		<module>${project.groupId}.${project.artifactId}</module>
 		<encoding>UTF-8</encoding>
 		<acgist.version>1.4.0</acgist.version>
-		<!-- 系统：win、mac、linux -->
-		<os.name>win</os.name>
 		<!-- Java -->
 		<java.version>11</java.version>
 		<!-- JavaFX -->
 		<javafx.version>11.0.2</javafx.version>
 		<!-- 依赖 -->
 		<h2.version>1.4.199</h2.version>
-		<slf4j.version>1.8.0-alpha2</slf4j.version>
 		<logback.version>1.3.0-alpha4</logback.version>
 		<!-- JUnit -->
 		<junit.version>4.12</junit.version>
@@ -110,62 +113,6 @@
 					<target>${java.version}</target>
 					<encoding>${encoding}</encoding>
 				</configuration>
-			</plugin>
-			<!-- resources：mvn resources:resources -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>${maven.resources.version}</version>
-				<configuration>
-					<resources>
-						<resource>
-							<directory>src/main/resources</directory>
-							<!-- 配置文件属性替换：properties -->
-							<filtering>false</filtering>
-							<includes>
-								<include>**</include>
-							</includes>
-							<!-- 排除环境资源文件 -->
-							<excludes>
-								<exclude>profiles/**</exclude>
-							</excludes>
-						</resource>
-						<resource>
-							<!-- travis-ci配置斜杠编译卡住 -->
-							<directory>./</directory>
-							<filtering>false</filtering>
-							<targetPath>META-INF/</targetPath>
-							<!-- 开源协议、README -->
-							<includes>
-								<include>LICENSE</include>
-								<include>README.md</include>
-							</includes>
-						</resource>
-					</resources>
-				</configuration>
-				<executions>
-					<!-- 自动复制环境资源 -->
-					<execution>
-						<id>auto-copy-resources-profiles</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<!-- 覆盖资源 -->
-							<overwrite>true</overwrite>
-							<outputDirectory>${project.build.outputDirectory}</outputDirectory>
-							<resources>
-								<!-- 环境资源 -->
-								<resource>
-									<directory>src/main/resources/profiles/${package.environment}</directory>
-									<filtering>false</filtering>
-								</resource>
-							</resources>
-						</configuration>
-						<inherited></inherited>
-					</execution>
-				</executions>
 			</plugin>
 			<!-- dependency：mvn dependency:auto-copy-dependencies-lib -->
 			<plugin>
