--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,7 @@
 	<packaging>pom</packaging>
 	
 	<url>https://gitee.com/acgist/snail</url>
-	
-	<name>parent</name>
+	<name>蜗牛</name>
 	<description>基于Java、JavaFX开发的下载工具，支持下载协议：BT（BitTorrent、磁力链接、种子）、FTP、HTTP。</description>
 	<inceptionYear>2019</inceptionYear>
 	
