添加删除任务文件设置

--- a/snail/src/main/resources/config/system.properties
+++ b/snail/src/main/resources/config/system.properties
@@ -20,6 +20,9 @@ acgist.system.support=https://gitee.com/acgist/snail/issues
 #================ STUN ================#
 # STUN服务器
 acgist.system.stun.server=stun:stun1.l.google.com:19302
+#================ 任务 ================#
+# 删除任务是否删除文件
+acgist.task.file.delete=false
 #================ 端口 ================#
 # 系统服务端口
 acgist.service.port=16888
