--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ jdk:
 install: true
 
 # 编译命令
-script: mvn clean package -P release -D skipTests=true -D gpg.skip=true -B -V
+script: mvn clean package -P release -D gpg.skip=true -D maven.test.skip=true -B -V
