--- a/snail-extend/pom.xml
+++ b/snail-extend/pom.xml
@@ -32,7 +32,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>com.acgist.extend.Application</mainClass>
+							<mainClass>com.acgist.main.CodeApplication</mainClass>
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib</classpathPrefix>
 						</manifest>
