--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	
 	<groupId>com.acgist</groupId>
 	<artifactId>parent</artifactId>
-	<version>${acgist.version}</version>
+	<version>1.4.0</version>
 	<packaging>pom</packaging>
 	
 	<properties>
