--- a/snail/pom.xml
+++ b/snail/pom.xml
@@ -6,7 +6,7 @@
 	
 	<parent>
 		<groupId>com.acgist</groupId>
-		<artifactId>parent</artifactId>
+		<artifactId>snail.parent</artifactId>
 		<version>1.4.1</version>
 	</parent>
 	
