--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 		<h2.version>1.4.199</h2.version>
 		<logback.version>1.3.0-alpha4</logback.version>
 		<!-- JUnit -->
-		<junit.version>4.12</junit.version>
+		<junit.version>5.6.2</junit.version>
 		<!-- Maven插件 -->
 		<maven.gpg.version>1.6</maven.gpg.version>
 		<maven.jar.version>3.2.0</maven.jar.version>
@@ -72,9 +72,9 @@
 	<dependencies>
 		<!-- 测试：JUnit -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-engine</artifactId>
+		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -378,9 +378,9 @@
 			</dependency>
 			<!-- 测试：JUnit -->
 			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>${junit.version}</version>
+			    <groupId>org.junit.jupiter</groupId>
+			    <artifactId>junit-jupiter-engine</artifactId>
+			    <version>${junit.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
