--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 		<!-- 测试：JUnit -->
 		<dependency>
 		    <groupId>org.junit.jupiter</groupId>
-		    <artifactId>junit-jupiter-engine</artifactId>
+		    <artifactId>junit-jupiter</artifactId>
 		    <scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -379,7 +379,7 @@
 			<!-- 测试：JUnit -->
 			<dependency>
 			    <groupId>org.junit.jupiter</groupId>
-			    <artifactId>junit-jupiter-engine</artifactId>
+			    <artifactId>junit-jupiter</artifactId>
 			    <version>${junit.version}</version>
 			</dependency>
 		</dependencies>
