JavaDoc忽略模块文件

--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,10 @@
 						<aggregate>true</aggregate>
 						<docencoding>${encoding}</docencoding>
 						<description>${project.description}</description>
+						<!-- 忽略模块描述 -->
+						<sourceFileExcludes>
+							<sourceFileExclude>**/module-info.java</sourceFileExclude>
+						</sourceFileExcludes>
 					</configuration>
 					<executions>
 						<!-- 自动打包文档 -->
