--- a/snail/src/main/resources/config/system.properties
+++ b/snail/src/main/resources/config/system.properties
@@ -20,6 +20,7 @@ acgist.system.support=https://gitee.com/acgist/snail/issues
 #================ STUN ================#
 # STUN服务器
 acgist.system.stun.server=stun:stun1.l.google.com:19302
+# 备用：stun:stun2.l.google.com:19302、stun:stun3.l.google.com:19302、stun:stun4.l.google.com:19302
 #================ 任务 ================#
 # 删除任务是否删除文件
 acgist.task.file.delete=false
