--- a/snail/src/main/resources/config/system.properties
+++ b/snail/src/main/resources/config/system.properties
@@ -17,6 +17,8 @@ acgist.system.author=https://www.acgist.com/about
 acgist.system.source=https://gitee.com/acgist/snail
 # 问题与建议
 acgist.system.support=https://gitee.com/acgist/snail/issues
+# 最新稳定版本
+acgist.system.latest.release=https://gitee.com/api/v5/repos/acgist/snail/releases/latest
 #================ STUN ================#
 # STUN服务器
 acgist.system.stun.server=stun:stun1.l.google.com:19302
