--- a/pom.xml
+++ b/pom.xml
@@ -394,7 +394,7 @@
 	<!-- 基本信息 -->
 	<url>https://gitee.com/acgist/snail</url>
 	<name>snail.parent</name>
-	<description>基于Java、JavaFX开发的下载工具，支持下载协议：BT（BitTorrent、磁力链接、种子）、FTP、HTTP。</description>
+	<description>基于Java、JavaFX开发的下载工具，支持下载协议：BT（BitTorrent、磁力链接、种子）、HLS、FTP、HTTP。</description>
 	<inceptionYear>2019</inceptionYear>
 
 	<!-- 仓库信息 -->
