--- a/pom.xml
+++ b/pom.xml
@@ -259,7 +259,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>3.0.0</version>
+					<version>${maven.javadoc.version}</version>
 					<configuration>
 						<!-- 忽略警告：注解、标签等等 -->
 						<doclint>none</doclint>
