--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 		<javafx.version>11.0.2</javafx.version>
 		<!-- 依赖 -->
 		<h2.version>1.4.200</h2.version>
-		<logback.version>1.3.0-alpha4</logback.version>
+		<slf4j.version>1.7.30</slf4j.version>
 		<!-- JUnit -->
 		<junit.version>5.6.2</junit.version>
 		<!-- Maven插件 -->
@@ -180,16 +180,6 @@
 									<exclude>profiles/**</exclude>
 								</excludes>
 							</resource>
-							<resource>
-								<directory>../</directory>
-								<filtering>false</filtering>
-								<targetPath>META-INF/</targetPath>
-								<!-- 开源协议、README -->
-								<includes>
-									<include>LICENSE</include>
-									<include>README.md</include>
-								</includes>
-							</resource>
 						</resources>
 					</configuration>
 					<executions>
@@ -211,6 +201,16 @@
 									<resource>
 										<directory>src/main/resources/profiles/${package.environment}</directory>
 										<filtering>false</filtering>
+									</resource>
+									<!-- 开源协议、README -->
+									<resource>
+										<directory>../</directory>
+										<filtering>false</filtering>
+										<targetPath>META-INF/</targetPath>
+										<includes>
+											<include>LICENSE</include>
+											<include>README.md</include>
+										</includes>
 									</resource>
 								</resources>
 							</configuration>
@@ -324,7 +324,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
-					<version>${maven.dependency.version}</version><!--$NO-MVN-MAN-VER$-->
+					<version>${maven.dependency.version}</version>
 					<configuration>
 						<stripVersion>false</stripVersion>
 						<includeScope>compile</includeScope>
@@ -396,13 +396,12 @@
 				<version>${h2.version}</version>
 			</dependency>
 			<!--
-			日志：logback
-			隐式依赖：slf4j-api、logback-core
+			日志：slf4j
 			-->
 			<dependency>
-				<groupId>ch.qos.logback</groupId>
-				<artifactId>logback-classic</artifactId>
-				<version>${logback.version}</version>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
 			</dependency>
 			<!--
 			GUI：JavaFX
