--- a/snail/src/main/resources/profiles/release/logger.properties
+++ b/snail/src/main/resources/profiles/release/logger.properties
@@ -1,13 +1,13 @@
 #================ 日志配置 ================#
-# 日志名称
-logger.name=Snail
 # 日志级别
 logger.level=INFO
+# 日志系统名称
+logger.system=Snail
 # 日志适配
 logger.adapter=file
 # 文件日志名称
 logger.file.name=logs/snail.log
 # 文件日志缓存
 logger.file.buffer=8192
-# 文件日志最大备份数量
-logger.file.max.size=30
+# 文件日志最大备份时间
+logger.file.max.days=30
