--- a/snail/src/main/resources/config/bt.dht.properties
+++ b/snail/src/main/resources/config/bt.dht.properties
@@ -1,4 +1,4 @@
-#================ DHT节点默认配置 ================#
+#================ 默认DHT节点配置 ================#
 # 优先使用UserDir目录下的bt.dht.properties配置
 # 格式：NodeID=host:port
 32f54e697351ff4aec29cdbaabf2fbe3467cc267=router.utorrent.com:6881
