--- a/snail/src/main/resources/config/download.properties
+++ b/snail/src/main/resources/config/download.properties
@@ -1,7 +1,7 @@
-#================ 下载配置（用户设置） ================#
+#================ 下载配置 ================#
 # 下载目录
 acgist.download.path=/download
-# 下载任务数量
+# 下载数量
 acgist.download.size=4
 # 消息提示
 acgist.download.notice=true
