--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 		<maven.gpg.version>1.6</maven.gpg.version>
 		<maven.jar.version>3.2.0</maven.jar.version>
 		<maven.nexus.version>1.6.8</maven.nexus.version>
+		<maven.jacoco.version>0.8.6</maven.jacoco.version>
 		<maven.source.version>3.2.0</maven.source.version>
 		<maven.javadoc.version>3.2.0</maven.javadoc.version>
 		<maven.compiler.version>3.8.1</maven.compiler.version>
@@ -113,6 +114,10 @@
 				<artifactId>maven-resources-plugin</artifactId>
 			</plugin>
 			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 			</plugin>
@@ -141,6 +146,36 @@
 		<!-- 插件管理 -->
 		<pluginManagement>
 			<plugins>
+				<!--
+				测试报告：
+				mvn test jacoco:report
+				mvn test jacoco:prepare-agent
+				体检报告：
+				mvn sonar:sonar -D "sonar.projectKey=snail" -D "sonar.host.url=http://localhost:9000" -D "sonar.login=token"
+				忽略没有测试：-D failIfNoTests=false
+				设置测试路径：-D "test=com.acgist.snail.*"
+				-->
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${maven.jacoco.version}</version>
+					<configuration>
+						<skip>${skipTests}</skip>
+						<!--
+						<skip>${maven.test.skip}</skip>
+						-->
+					</configuration>
+					<executions>
+						<!-- 生成测试数据：提供Sonar展示 -->
+						<!-- 必须显示调用 -->
+						<execution>
+							<id>prepare-agent</id>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 				<!--
 				编译代码：
 				mvn compile
